istio/deployments/istio/traffic-management/virtual-service.yml
#Istio virtual service
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: servicea
spec:
  hosts:
    - "*"
    - servicea.demo.svc.cluster.local
  gateways:
    - servicea
  http:
    - match:
        - headers:
            beta:
              exact: "true"
          uri:
            prefix: /servicea
      rewrite:
        uri: /
      route:
        - destination:
            host: servicea.demo.svc.cluster.local
            subset: v1
    - match:
        - uri:
            prefix: /servicea/
      rewrite:
        uri: /
      route:
        - destination:
            host: servicea.demo.svc.cluster.local
            subset: v2
